fix spacing between tags/series and icon

--- a/themes/dimolto/assets/sass/tags.scss
+++ b/themes/dimolto/assets/sass/tags.scss
@@ -14,3 +14,7 @@
     content: "";
   }
 }
+
+.svg-icon + .tags {
+  margin-left: 0.5em;
+}
